Latest changes from PR #2106: files - authentication - checksum is not required - openapi specs on headers which does not affect the client
