# api/openapi.json
@@ -124,7 +124,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "HTTPBasic": []
+          }
+        ]
       }
     },
     "/v0/files:upload": {
@@ -133,8 +138,19 @@
           "files"
         ],
         "summary": "Upload File",
-        "description": "Uploads a single file to the system\n\nTo upload multiple with one call, see upload_files",
+        "description": "Uploads a single file to the system    ",
         "operationId": "upload_file",
+        "parameters": [
+          {
+            "required": false,
+            "schema": {
+              "title": "Content-Length",
+              "type": "string"
+            },
+            "name": "content-length",
+            "in": "header"
+          }
+        ],
         "requestBody": {
           "content": {
             "multipart/form-data": {
@@ -166,7 +182,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "HTTPBasic": []
+          }
+        ]
       }
     },
     "/v0/files/{file_id}": {
@@ -210,7 +231,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "HTTPBasic": []
+          }
+        ]
       }
     },
     "/v0/files/{file_id}:download": {
@@ -251,7 +277,12 @@
               }
             }
           }
-        }
+        },
+        "security": [
+          {
+            "HTTPBasic": []
+          }
+        ]
       }
     },
     "/v0/solvers": {
@@ -795,8 +826,7 @@
       "FileMetadata": {
         "title": "FileMetadata",
         "required": [
-          "filename",
-          "checksum"
+          "filename"
         ],
         "type": "object",
         "properties": {
